# kashmir-carpentry-accounting-system

./: README.md  pyproject.toml  requirements.txt
kashmir_carpentry.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
