[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kashmir_carpentry"
version = "0.1.0"
authors = [
    { name = "Kashmir Carpentry LLC" }
]
description = "Accounting Management System for Kashmir Carpentry LLC"
requires-python = ">=3.8"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "sqlalchemy==2.0.23",
    "pydantic==2.5.1",
    "email-validator==2.1.0.post1",
    "python-jose==3.3.0",
    "passlib==1.7.4",
    "python-multipart==0.0.6",
    "python-dotenv==1.0.0",
    "jinja2==3.1.2",
    "pytest==7.4.3",
    "alembic==1.12.1"
]

[tool.setuptools]
packages = ["src"]
